# client_chat_v2

./: README.md  app.py  chat_screen.py  connection_screen.py  contatos.json  file_picker.py  login_screen.py  pyproject.toml  utils.py
chats/: 1_2.json  1_3.json  1_built-in function id.json  2_1.json  2_3.json  3_1.json
