[project]
name = "projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Jhonatan"}
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "textual (>=8.2.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pynvim (>=0.6.0,<0.7.0)"
]
